discussion/kv_engine/176436/176436_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Generate serverless configuration as part of build

Generate the configuration.json as part of the build
to remove the duplication of constants.

Change-Id: Ibcb8736c40142dc5b12e879df6e178b7be3e57d5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-21 11:48:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-06-21 13:08:43.000000000
Message: 
Patch Set 1: Code-Review+1

(2 comments)
Line:3, etc/couchbase/kv/serverless/CMakeLists.txt -> nit configuration

Line:23, etc/couchbase/kv/serverless/generate_serverless_config.cc -> nlohmann json does do streaming operators and manipulators like

 fstream << std::setw(2) << someJson << std::endl;

but for something this straight forward it doesn't matter much either way

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-21 14:25:51.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18196/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:19:24: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
nlohmann::json Config::to_json() const {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:20:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    nlohmann::json json;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:34:17: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            json.value("default_throttle_limit", DefaultThrottleLimit),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:37:17: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            json.value("max_connections_per_bucket", MaxConnectionsPerBucket),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:40:17: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            json.value("read_compute_unit_size", ReadComputeUnitSize),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:43:17: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            json.value("write_compute_unit_size", WriteComputeUnitSize),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18196/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/serverless_config.cc:19:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18196/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39424/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/serverless_config.cc:19:24:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39424/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46924/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21047/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7960/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19269/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7857/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20054/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-06-21 14:52:32.000000000
Message: 
Patch Set 1:

(2 comments)
Line:3, etc/couchbase/kv/serverless/CMakeLists.txt -> Done

Line:23, etc/couchbase/kv/serverless/generate_serverless_config.cc -> Ack

----------------------------------------------------------------------------------------------------------------------
